# librarian-cli

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.ru.md  bugs.md  librarian-spec-v2.1.md  librarian-spec-v2.2.md  pyproject.toml  server.json
librarian/: .gitignore  README.md  pyproject.toml
librarian/scripts/: make_fixtures.py  smoke_wheel.sh  update_golden.py  vendor_tokenizer.py
librarian/src/librarian/: __init__.py  catalog.py  cli.py  config.py  detect.py  emit.py  ir.py  pipeline.py  quality.py  search.py  slug.py  structure.py  tokens.py  xmlsafe.py
librarian/src/librarian/extractors/: __init__.py  docx.py  epub.py  fb2.py  html.py  html_blocks.py  md.py  pdf.py  textrules.py  txt.py  zipsafe.py
librarian/src/librarian/passes/: normalize.py  pdf_layout.py  sections.py
librarian/tests/: conftest.py  test_determinism.py  test_golden.py  test_perf.py
librarian/tests/fixtures/epub/: bezgolov.epub  povest.epub
librarian/tests/golden/arhiv/: index.json
librarian/tests/golden/arhiv/ivan-hvostov-skazka-iz-arhiva/: book.json  report.json
librarian/tests/golden/bezgolov/: index.json
librarian/tests/golden/bezgolov/pelageya-morskaya-bezgolovaya-kniga/: book.json  report.json
librarian/tests/golden/bezstiley/: index.json
librarian/tests/golden/bezstiley/bezstiley/: book.json  report.json
librarian/tests/golden/koi8/: index.json
librarian/tests/golden/koi8/koi8/: book.json
librarian/tests/golden/kolonki2/: index.json
librarian/tests/golden/kolonki3/: index.json
librarian/tests/golden/otchet/: index.json
librarian/tests/golden/perenosy/: index.json
librarian/tests/golden/povest/: index.json
librarian/tests/golden/pustoy_parol/: index.json
librarian/tests/golden/roman_cp1251/: index.json
librarian/tests/golden/skazka/: index.json
librarian/tests/golden/spravochnik/: index.json
librarian/tests/golden/statya/: index.json
librarian/tests/golden/voyage/: index.json
librarian/tests/golden/zaglushka/: index.json
librarian/tests/golden/zametka/: index.json
librarian/tests/golden/zaparoleny/: index.json
librarian/tests/unit/: test_catalog.py  test_cli.py  test_config.py  test_detect.py  test_docx.py  test_emit_book.py  test_epub.py  test_errors.py  test_fb2.py  test_guard.py  test_html.py  test_html_blocks.py  test_md.py  test_metadata.py  test_normalize.py  test_pdf_layout.py  test_pipeline.py  test_publish.py  test_quality.py  test_refine.py  test_render.py  test_search.py  test_sections.py  test_serve.py  test_structure.py  test_textrules.py  test_txt.py  test_xmlsafe.py  test_zipsafe.py
(+145 files in other folders)
